# react-native-secp256k1-urnm

./: CONTRIBUTING.md  LICENSE  README.md  build-secp256k1.sh  package.json  react-native-secp256k1-urnm.podspec  tsconfig.json
android/: .gitignore  build.gradle  gradle.properties
android/jni/include/: secp256k1.h
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt  crypto_bridge.cpp  native-crypto.cpp  native-crypto.h  org_bitcoin_NativeSecp256k1.c  org_bitcoin_NativeSecp256k1.h  org_bitcoin_Secp256k1Context.c  org_bitcoin_Secp256k1Context.h
android/src/main/java/com/reactnativesecp256k1urnm/: Secp256k1UrnmExt.java  Secp256k1UrnmModule.java  Secp256k1UrnmPackage.java
android/src/main/java/org/bitcoin/: NativeSecp256k1.java  NativeSecp256k1Test.java  NativeSecp256k1Util.java  Secp256k1Context.java
example/: package.json  react-native.config.js
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/debug/java/com/example/reactnativesecp256k1urnm/: ReactNativeFlipper.java
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/jni/: MainApplicationTurboModuleManagerDelegate.h  MainComponentsRegistry.h
example/android/app/src/main/res/values/: strings.xml
example/ios/: File.swift  Podfile
example/ios/Secp256k1UrnmExample/: LaunchScreen.storyboard
example/ios/Secp256k1UrnmExample.xcodeproj/: project.pbxproj
example/ios/Secp256k1UrnmExample.xcodeproj/xcshareddata/xcschemes/: Secp256k1UrnmExample.xcscheme
example/ios/Secp256k1UrnmExample.xcworkspace/: contents.xcworkspacedata
example/src/: App.tsx  testCases.tsx  testEncrypt.ts  utils.ts
ios/: Secp256k1Urnm.h  Secp256k1Urnm.m  Secp256k1Urnm.mm  Secp256k1UrnmExt.h  Secp256k1UrnmExt.m  base64.h  base64.m
ios/Secp256k1Urnm.xcodeproj/: project.pbxproj
src/: errors.tsx  ext.tsx  index.tsx  secp256k1base64.tsx  utils.ts
(+5 files in other folders)
